ahang/consul/consul-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-consul
  namespace: default
  annotations: 
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
  - host:
    http:
      paths:
      - path: 
        backend:
          serviceName: consul
          servicePort: 8500
