ahang/consul/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: default
  annotations: 
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
  - host:
    http:
      paths:
      - path: 
        backend:
          serviceName: info-gateway
          servicePort: 9999
